--- a/src/main/resources/Views/hello-view.fxml
+++ b/src/main/resources/Views/hello-view.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.text.TextFlow?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dictionary.DictionaryController.helloviewController">
    <children>
@@ -34,16 +33,43 @@
             <Font name="Arial Bold" size="18.0" />
          </font>
       </Text>
-      <TextFlow layoutX="46.0" layoutY="167.0" prefHeight="298.0" prefWidth="372.0">
-         <children>
-            <Label fx:id="wordLabel" prefHeight="55.0" prefWidth="134.0" styleClass="word" stylesheets="@test.css" />
-            <TextField fx:id="partsofspeech" alignment="BOTTOM_LEFT" prefHeight="40.0" prefWidth="163.0" promptText="parts of speech" styleClass="partofspeech" stylesheets="@test.css" />
-            <TextField fx:id="phonetic" alignment="TOP_LEFT" prefHeight="34.0" prefWidth="230.0" promptText="phonetic" styleClass="phonetic" stylesheets="@test.css" />
-            <TextField prefHeight="34.0" prefWidth="198.0" styleClass="definition" stylesheets="@test.css" text="Definition" />
-            <TextArea fx:id="meaning" prefHeight="186.0" prefWidth="364.0" promptText="Meaning" styleClass="meaning" stylesheets="@test.css" />
-         </children>
-      </TextFlow>
       <ComboBox fx:id="comboBox" layoutX="268.0" layoutY="19.0" prefHeight="28.0" prefWidth="253.0" promptText="search for a word" stylesheets="@test.css" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="34.0" layoutX="483.0" layoutY="17.0" stroke="WHITE" strokeType="INSIDE" width="67.0" />
+      <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="334.0" layoutX="421.0" layoutY="156.0" stroke="BLACK" strokeType="INSIDE" style="-fx-arc-width: 50; -fx-arc-height: 50;" visible="false" width="409.0" />
+      <Label fx:id="wordLabel" layoutX="457.0" layoutY="174.0" prefHeight="55.0" prefWidth="146.0" styleClass="word" stylesheets="@test.css" />
+      <TextField fx:id="partsofspeech" alignment="BOTTOM_LEFT" layoutX="591.0" layoutY="177.0" prefHeight="40.0" prefWidth="209.0" styleClass="partofspeech" stylesheets="@test.css" />
+      <TextField fx:id="phonetic" alignment="TOP_LEFT" layoutX="451.0" layoutY="223.0" prefHeight="34.0" prefWidth="230.0" styleClass="phonetic" stylesheets="@test.css" />
+      <TextField fx:id="definitionprompt" layoutX="451.0" layoutY="264.0" prefHeight="34.0" prefWidth="198.0" styleClass="definition" stylesheets="@test.css" text="Definition" visible="false" />
+      <TextArea fx:id="meaning" layoutX="444.0" layoutY="293.0" prefHeight="173.0" prefWidth="364.0" styleClass="meaning" stylesheets="@test.css" />
+      <TextArea fx:id="synonym" layoutX="58.0" layoutY="215.0" prefHeight="62.0" prefWidth="298.0" styleClass="meaning" stylesheets="@test.css">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextArea>
+      <TextArea fx:id="example" layoutX="58.0" layoutY="316.0" prefHeight="234.0" prefWidth="298.0" styleClass="meaning" stylesheets="@test.css">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextArea>
+      <ImageView fx:id="synonymContainer" fitHeight="62.0" fitWidth="298.0" layoutX="58.0" layoutY="165.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../images/SynonymsLabel.png" />
+         </image>
+      </ImageView>
+      <Text fx:id="synonymPrompt" fill="#1a475b" layoutX="75.0" layoutY="193.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Synonyms" visible="false" wrappingWidth="139.94683837890625">
+         <font>
+            <Font name="Playfair Display Bold" size="20.0" />
+         </font>
+      </Text>
+      <ImageView fx:id="exampleContainer" fitHeight="62.0" fitWidth="298.0" layoutX="58.0" layoutY="264.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../images/SynonymsLabel.png" />
+         </image>
+      </ImageView>
+      <Text fx:id="examplePrompt" fill="#1a475b" layoutX="75.0" layoutY="292.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Examples" visible="false" wrappingWidth="139.94683837890625">
+         <font>
+            <Font name="Playfair Display Bold" size="20.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
