--- a/src/main/resources/Views/hello-view.fxml
+++ b/src/main/resources/Views/hello-view.fxml
@@ -33,20 +33,20 @@
             <Font name="Arial Bold" size="18.0" />
          </font>
       </Text>
-      <ComboBox fx:id="comboBox" layoutX="268.0" layoutY="19.0" prefHeight="28.0" prefWidth="253.0" promptText="search for a word" stylesheets="@test.css" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="34.0" layoutX="483.0" layoutY="17.0" stroke="WHITE" strokeType="INSIDE" width="67.0" />
-      <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="334.0" layoutX="421.0" layoutY="156.0" stroke="BLACK" strokeType="INSIDE" style="-fx-arc-width: 50; -fx-arc-height: 50;" visible="false" width="409.0" />
-      <Label fx:id="wordLabel" layoutX="457.0" layoutY="174.0" prefHeight="55.0" prefWidth="146.0" styleClass="word" stylesheets="@test.css" />
-      <TextField fx:id="partsofspeech" alignment="BOTTOM_LEFT" layoutX="591.0" layoutY="177.0" prefHeight="40.0" prefWidth="209.0" styleClass="partofspeech" stylesheets="@test.css" />
-      <TextField fx:id="phonetic" alignment="TOP_LEFT" layoutX="451.0" layoutY="223.0" prefHeight="34.0" prefWidth="230.0" styleClass="phonetic" stylesheets="@test.css" />
-      <TextField fx:id="definitionprompt" layoutX="451.0" layoutY="264.0" prefHeight="34.0" prefWidth="198.0" styleClass="definition" stylesheets="@test.css" text="Definition" visible="false" />
-      <TextArea fx:id="meaning" layoutX="444.0" layoutY="293.0" prefHeight="173.0" prefWidth="364.0" styleClass="meaning" stylesheets="@test.css" />
-      <TextArea fx:id="synonym" layoutX="58.0" layoutY="215.0" prefHeight="62.0" prefWidth="298.0" styleClass="meaning" stylesheets="@test.css">
+      <ComboBox fx:id="comboBox" layoutX="268.0" layoutY="19.0" prefHeight="30.0" prefWidth="290.0" promptText="search for a word" stylesheets="@test.css" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="34.0" layoutX="483.0" layoutY="17.0" stroke="WHITE" strokeType="INSIDE" width="77.0" />
+      <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="334.0" layoutX="421.0" layoutY="156.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="1.5" style="-fx-arc-width: 50; -fx-arc-height: 50;" visible="false" width="409.0" />
+      <Label fx:id="wordLabel" layoutX="457.0" layoutY="174.0" prefHeight="55.0" prefWidth="182.0" styleClass="word" stylesheets="@test.css" />
+      <TextField fx:id="partsofspeech" alignment="BOTTOM_LEFT" editable="false" layoutX="634.0" layoutY="176.0" prefHeight="40.0" prefWidth="198.0" styleClass="partofspeech" stylesheets="@test.css" />
+      <TextField fx:id="phonetic" alignment="TOP_LEFT" editable="false" layoutX="451.0" layoutY="223.0" prefHeight="34.0" prefWidth="146.0" styleClass="phonetic" stylesheets="@test.css" />
+      <TextField fx:id="definitionPrompt" layoutX="451.0" layoutY="264.0" prefHeight="34.0" prefWidth="198.0" styleClass="definition" stylesheets="@test.css" text="Definition" visible="false" />
+      <TextArea fx:id="meaning" editable="false" layoutX="444.0" layoutY="293.0" prefHeight="173.0" prefWidth="364.0" styleClass="meaning" stylesheets="@test.css" />
+      <TextArea fx:id="synonym" editable="false" layoutX="58.0" layoutY="215.0" prefHeight="62.0" prefWidth="298.0" styleClass="meaning" stylesheets="@test.css">
          <font>
             <Font size="14.0" />
          </font>
       </TextArea>
-      <TextArea fx:id="example" layoutX="58.0" layoutY="316.0" prefHeight="234.0" prefWidth="298.0" styleClass="meaning" stylesheets="@test.css">
+      <TextArea fx:id="example" editable="false" layoutX="58.0" layoutY="316.0" prefHeight="234.0" prefWidth="298.0" styleClass="meaning" stylesheets="@test.css">
          <font>
             <Font size="14.0" />
          </font>
@@ -71,5 +71,10 @@
             <Font name="Playfair Display Bold" size="20.0" />
          </font>
       </Text>
+      <ImageView fx:id="voiceButton" fitHeight="21.0" fitWidth="32.0" layoutX="579.0" layoutY="230.0" onMouseClicked="#playVoice" onMouseEntered="#setOnMouseEntered" onMouseExited="#setOnMouseExited" onMousePressed="#setOpacityPressed" onMouseReleased="#setOpacityReleased" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../images/voiceButton.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
