--- a/src/main/resources/Views/hello-view.fxml
+++ b/src/main/resources/Views/hello-view.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dictionary.DictionaryController.helloviewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dictionary.DictionaryController.searchController">
    <children>
       <ImageView fitHeight="600.0" fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -33,20 +33,20 @@
             <Font name="Arial Bold" size="18.0" />
          </font>
       </Text>
-      <ComboBox fx:id="comboBox" layoutX="259.0" layoutY="15.0" prefHeight="30.0" prefWidth="290.0" stylesheets="@test.css" />
+      <ComboBox fx:id="comboBox" layoutX="269.0" layoutY="15.0" prefHeight="30.0" prefWidth="290.0" stylesheets="@test.css" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="34.0" layoutX="483.0" layoutY="17.0" stroke="WHITE" strokeType="INSIDE" width="77.0" />
-      <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="334.0" layoutX="421.0" layoutY="156.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="1.5" style="-fx-arc-width: 50; -fx-arc-height: 50;" visible="false" width="409.0" />
+      <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="354.0" layoutX="421.0" layoutY="156.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="1.5" style="-fx-arc-width: 50; -fx-arc-height: 50;" visible="false" width="409.0" />
       <Label fx:id="wordLabel" layoutX="457.0" layoutY="174.0" prefHeight="55.0" prefWidth="182.0" styleClass="word" stylesheets="@test.css" />
       <TextField fx:id="partsofspeech" alignment="BOTTOM_LEFT" editable="false" layoutX="634.0" layoutY="176.0" prefHeight="40.0" prefWidth="198.0" styleClass="partofspeech" stylesheets="@test.css" />
       <TextField fx:id="phonetic" alignment="TOP_LEFT" editable="false" layoutX="451.0" layoutY="223.0" prefHeight="34.0" prefWidth="146.0" styleClass="phonetic" stylesheets="@test.css" />
       <TextField fx:id="definitionPrompt" layoutX="451.0" layoutY="264.0" prefHeight="34.0" prefWidth="198.0" styleClass="definition" stylesheets="@test.css" text="Definition" visible="false" />
-      <TextArea fx:id="meaning" editable="false" layoutX="444.0" layoutY="293.0" prefHeight="173.0" prefWidth="364.0" styleClass="meaning" stylesheets="@test.css" />
+      <TextArea fx:id="meaning" editable="false" layoutX="444.0" layoutY="293.0" prefHeight="190.0" prefWidth="364.0" styleClass="meaning" stylesheets="@test.css" />
       <TextArea fx:id="synonym" editable="false" layoutX="58.0" layoutY="215.0" prefHeight="62.0" prefWidth="298.0" styleClass="meaning" stylesheets="@test.css">
          <font>
             <Font size="14.0" />
          </font>
       </TextArea>
-      <TextArea fx:id="example" editable="false" layoutX="58.0" layoutY="316.0" prefHeight="234.0" prefWidth="298.0" styleClass="meaning" stylesheets="@test.css">
+      <TextArea fx:id="example" editable="false" layoutX="58.0" layoutY="316.0" prefHeight="259.0" prefWidth="298.0" styleClass="meaning" stylesheets="@test.css">
          <font>
             <Font size="14.0" />
          </font>
@@ -76,6 +76,11 @@
             <Image url="@../images/voiceButton.png" />
          </image>
       </ImageView>
-      <TextField fx:id="searchField" layoutX="259.0" layoutY="13.0" prefHeight="42.0" prefWidth="290.0" promptText="search here" styleClass="searchBox" stylesheets="@test.css" />
+      <TextField fx:id="searchField" layoutX="269.0" layoutY="13.0" prefHeight="42.0" prefWidth="290.0" promptText="search here" styleClass="searchBox" stylesheets="@test.css" />
+      <ImageView fx:id="deleteAll" fitHeight="20.0" fitWidth="18.0" layoutX="526.0" layoutY="26.0" onMouseClicked="#clearSearchField" onMouseEntered="#setOnMouseEntered1" onMouseExited="#setOnMouseExited1" onMousePressed="#setOpacityPressed1" onMouseReleased="#setOpacityReleased1" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/XButton.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
