--- a/src/main/resources/View/QuizUI.fxml
+++ b/src/main/resources/View/QuizUI.fxml
@@ -1,34 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" stylesheets="@QuizStyle.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.QuizController">
    <children>
-      <RadioButton fx:id="PlanA" contentDisplay="CENTER" layoutX="12.0" layoutY="288.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="430.0" styleClass="radiobutton" stylesheets="@QuizStyle.css" text="RadioButton">
+      <ImageView fitHeight="600.0" fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/QuizBackgrond.jpg" />
+         </image>
+      </ImageView>
+      <Label fx:id="Question" alignment="TOP_LEFT" layoutX="37.0" layoutY="161.0" minWidth="826.0" prefWidth="826.0" text="h-h-hi its me again im back lets talk asap do you have the time lets talk">
          <font>
-            <Font name="Noto Sans Regular" size="24.0" />
-         </font></RadioButton>
-      <RadioButton fx:id="PlanC" layoutX="12.0" layoutY="381.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="430.0" styleClass="radiobutton" text="RadioButton" textAlignment="CENTER">
-         <font>
-            <Font name="Noto Sans Regular" size="24.0" />
-         </font></RadioButton>
-      <RadioButton fx:id="PlanB" layoutX="457.0" layoutY="288.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="430.0" styleClass="radiobutton" text="RadioButton" textAlignment="CENTER">
-         <font>
-            <Font name="Noto Sans Regular" size="24.0" />
-         </font></RadioButton>
-      <RadioButton fx:id="PlanD" layoutX="457.0" layoutY="381.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="430.0" styleClass="radiobutton" text="RadioButton" textAlignment="CENTER">
-         <font>
-            <Font name="Noto Sans Regular" size="24.0" />
-         </font></RadioButton>
-      <Label fx:id="Question" alignment="TOP_CENTER" layoutX="90.0" layoutY="148.0" prefHeight="200.0" prefWidth="723.0" text="Label" textAlignment="CENTER">
-         <font>
-            <Font name="Playfair Display Bold" size="26.0" />
-         </font></Label>
-      <Button fx:id="NextButton" layoutX="728.0" layoutY="510.0" mnemonicParsing="false" text="Next" />
-      <Label fx:id="Result" layoutX="75.0" layoutY="501.0" prefHeight="57.0" prefWidth="525.0" text="Label" />
+            <Font name="Noto Sans Bold" size="22.0" />
+         </font>
+         <padding>
+            <Insets left="10.0" />
+         </padding></Label>
+      <Button fx:id="NextButton" layoutX="737.0" layoutY="488.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="126.0" style="-fx-border-radius: 10;" styleClass="next-button" text="Next" />
+      <Label fx:id="Result" layoutX="37.0" layoutY="488.0" prefHeight="80.0" prefWidth="688.0" text="Label">
+         <padding>
+            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+         </padding></Label>
+      <ToggleButton fx:id="PlanA" layoutX="37.0" layoutY="288.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="405.0" styleClass="radiobutton" stylesheets="@QuizStyle.css" text="ToggleButton" />
+      <ToggleButton fx:id="PlanD" layoutX="457.0" layoutY="381.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="405.0" styleClass="radiobutton" stylesheets="@QuizStyle.css" text="ToggleButton" />
+      <ToggleButton fx:id="PlanC" layoutX="37.0" layoutY="381.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="405.0" styleClass="radiobutton" stylesheets="@QuizStyle.css" text="ToggleButton" />
+      <ToggleButton fx:id="PlanB" layoutX="457.0" layoutY="288.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="405.0" styleClass="radiobutton" stylesheets="@QuizStyle.css" text="ToggleButton" />
+      <Label fx:id="Score" layoutX="819.0" layoutY="105.0" prefHeight="44.0" prefWidth="19.0" styleClass="score" stylesheets="@QuizStyle.css" text="1" />
+      <Label text="Label" />
+      <Label fx:id="questionNumber" layoutX="40.0" layoutY="108.0" prefHeight="25.0" prefWidth="80.0" styleClass="question-no" stylesheets="@QuizStyle.css" text="Label" />
+      <ImageView fx:id="ResultBack" fitHeight="400.0" fitWidth="600.0" layoutX="150.0" layoutY="139.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/Result.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="FinalScore" alignment="CENTER" contentDisplay="CENTER" layoutX="381.0" layoutY="290.0" prefHeight="78.0" prefWidth="138.0" styleClass="final-score" text="10" textAlignment="CENTER" />
+      <Button fx:id="TryAgain" layoutX="170.0" layoutY="478.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="560.0" styleClass="try-again" text="Try Again" />
    </children>
 </AnchorPane>
