--- a/src/main/resources/Views/addWord.fxml
+++ b/src/main/resources/Views/addWord.fxml
@@ -20,6 +20,6 @@
       <TextField fx:id="newSynonym" layoutX="590.0" layoutY="234.0" prefHeight="26.0" prefWidth="239.0" styleClass="meaning" stylesheets="@test.css" />
       <TextField fx:id="newDefinition" layoutX="256.0" layoutY="297.0" prefHeight="73.0" prefWidth="602.0" styleClass="meaning" stylesheets="@test.css" />
       <TextField fx:id="newExample" layoutX="255.0" layoutY="409.0" prefHeight="74.0" prefWidth="602.0" styleClass="meaning" stylesheets="@test.css" />
-      <Button fx:id="addButton" layoutX="672.0" layoutY="534.0" mnemonicParsing="false" onMouseClicked="#addWord" prefHeight="26.0" prefWidth="100.0" text="Add" />
+      <Button fx:id="addButton" contentDisplay="CENTER" layoutX="473.0" layoutY="525.0" mnemonicParsing="false" onMouseClicked="#addWord" prefHeight="42.0" prefWidth="164.0" styleClass="addButton" stylesheets="@test.css" text="Add" textAlignment="CENTER" />
    </children>
 </AnchorPane>
