--- a/src/main/resources/Views/test.css
+++ b/src/main/resources/Views/test.css
@@ -121,4 +121,22 @@
     -fx-font-size: 14;
 }
 
+.addButton {
+    background-color: #1a475b;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 10px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.addButton:hover {
+    background-color: white;
+    color: #1a475b;
+}
 
