--- a/src/main/resources/View/QuizUI.fxml
+++ b/src/main/resources/View/QuizUI.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -28,7 +29,7 @@
          <padding>
             <Insets left="10.0" />
          </padding></Label>
-      <Button fx:id="NextButton" layoutX="737.0" layoutY="488.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="126.0" style="-fx-border-radius: 10;" styleClass="next-button" text="Next" />
+      <Button fx:id="NextButton" layoutX="737.0" layoutY="488.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="126.0" style="-fx-background-color: #527b8e;" styleClass="next-button" text="Next" />
       <Label fx:id="Result" layoutX="37.0" layoutY="488.0" prefHeight="80.0" prefWidth="688.0" styleClass="quiz-comment" text="Label">
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
@@ -50,5 +51,6 @@
       </ImageView>
       <Label fx:id="FinalScore" alignment="CENTER" contentDisplay="CENTER" layoutX="381.0" layoutY="290.0" prefHeight="78.0" prefWidth="138.0" styleClass="final-score" text="10" textAlignment="CENTER" />
       <Button fx:id="TryAgain" layoutX="170.0" layoutY="478.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="560.0" style="-fx-border-radius: 20;" styleClass="try-again" text="Try Again" />
+      <TextField editable="false" layoutX="46.0" layoutY="488.0" />
    </children>
 </AnchorPane>
