--- a/src/main/resources/Views/sidePanel.fxml
+++ b/src/main/resources/Views/sidePanel.fxml
@@ -17,7 +17,7 @@
                         <Image url="@../images/menuGUI.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="57.0" fitWidth="200.0" layoutX="3.0" layoutY="155.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="searchMenu" fitHeight="57.0" fitWidth="200.0" layoutX="3.0" layoutY="155.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/HomePage.png" />
                      </image>
