--- a/src/main/resources/Views/test.css
+++ b/src/main/resources/Views/test.css
@@ -2,6 +2,7 @@
     src: url("../fonts/PlayfairDisplay-Bold.ttf"),
     url("../fonts/OpenSans-Light.ttf"),
     url("../fonts/NotoSans-Bold.ttf"),
+    url("../fonts/Poppins-Bold.ttf"),
     url("../fonts/NotoSans-Regular.ttf");
 }
 
@@ -45,7 +46,7 @@
 
 .partofspeech {
     -fx-font-family: "Playfair Display";
-    -fx-font-size: 18;
+    -fx-font-size: 20;
     -fx-background-color: transparent;
     -fx-text-fill: #527b8e;
 }
@@ -65,7 +66,7 @@
 
 .meaning {
     -fx-background-color: transparent;
-    -fx-font-size: 14;
+    -fx-font-size: 16;
     -fx-font-weight: 100;
 }
 
@@ -137,5 +138,11 @@
 }
 
 .jfx-hamburger StackPane { -fx-background-color: white; }
+
+.transText {
+    -fx-background-color: transparent;
+    -fx-font-size: 18;
+    -fx-font-weight: 100;
+}
 
 
