--- a/src/main/resources/Views/Translate.fxml
+++ b/src/main/resources/Views/Translate.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
@@ -16,11 +17,11 @@
             <Image url="@../images/transText.png" />
          </image>
       </ImageView>
-      <TextArea fx:id="textToTranslate" layoutX="35.0" layoutY="211.0" prefHeight="233.0" prefWidth="406.0" styleClass="meaning" stylesheets="@test.css" wrapText="true">
+      <TextArea fx:id="textToTranslate" layoutX="35.0" layoutY="211.0" prefHeight="233.0" prefWidth="406.0" styleClass="transText" stylesheets="@test.css" wrapText="true">
          <font>
             <Font size="14.0" />
          </font></TextArea>
-      <TextArea fx:id="translatedText" layoutX="465.0" layoutY="211.0" prefHeight="234.0" prefWidth="386.0" styleClass="meaning" stylesheets="@test.css" wrapText="true">
+      <TextArea fx:id="translatedText" layoutX="465.0" layoutY="211.0" prefHeight="234.0" prefWidth="386.0" styleClass="transText" stylesheets="@test.css" wrapText="true">
          <font>
             <Font size="14.0" />
          </font></TextArea>
@@ -30,12 +31,18 @@
          <image>
             <Image url="@../images/swapIcon.png" />
          </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </ImageView>
       <Rectangle fx:id="transContainer" arcHeight="5.0" arcWidth="5.0" fill="#1a475b" height="33.0" layoutX="317.0" layoutY="467.0" stroke="TRANSPARENT" strokeType="INSIDE" style="-fx-arc-width: 30; -fx-arc-height: 35;" width="107.0" />
       <JFXButton fx:id="translateButton" buttonType="RAISED" layoutX="327.0" layoutY="466.0" onMouseClicked="#translateText" prefHeight="33.0" prefWidth="85.0" styleClass="popupTrans" stylesheets="@test.css" text="Translate" textFill="WHITE">
          <font>
             <Font name="Open Sans Light" size="14.0" />
-         </font></JFXButton>
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></JFXButton>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a475b" height="63.0" layoutX="-1.0" layoutY="-1.0" stroke="BLACK" strokeType="INSIDE" width="900.0" />
       <ImageView fitHeight="82.0" fitWidth="232.0" layoutX="350.0" layoutY="95.0" pickOnBounds="true" preserveRatio="true">
          <image>
