--- a/src/main/resources/Views/QuizStyle.css
+++ b/src/main/resources/Views/QuizStyle.css
@@ -16,6 +16,12 @@
     -fx-padding: 10px;
 }
 
+.question {
+    -fx-font-family: "Noto Sans Bold";
+    -fx-text-fill: #000000;
+    -fx-font-size: 22;
+}
+
 .next-button {
     -fx-border-radius: 10px;
     -fx-border-color: rgba(82, 123, 142, 0.40);
